# miscellaneous_toolbox

./: CMakeLists.txt  README  README.md  Requested Program Functions.txt  image_match_table.cpp  image_match_table.h  main.cpp  match.cpp  match.h
imagematcher/: CMakeLists.txt  INSTALL  TODO  config.h.in  folder_walk.cpp  folder_walk.h  image_match_table.cpp  image_match_table.h  main.cpp  match.cpp  match.h
office_license_checker/: README  TroysToolbox.sln
office_license_checker/TroysToolbox/: Program.cs  TroysToolbox.csproj
office_license_checker/TroysToolbox/Properties/: AssemblyInfo.cs
